Remove unused SendRawTx and WatchAddress endpoints
